# fractal-glyph-tape

./: .gitignore  CHANGELOG.md  CLOUDFLARE_DEPLOY.md  CONTRIBUTING.md  LAUNCH_ANNOUNCEMENT.md  LAUNCH_PLAN.md  LICENSE  MANIFEST.in  PHASE-4-COMPLETE.md  QUICKSTART.md  QUICKSTART_PHASE4.md  README.md  RELEASE_NOTES_v0.1.0.md  SOCIAL_MEDIA_POSTS.md  VERCEL_DEPLOY.md  claude.md  pyproject.toml  requirements.txt  setup.py  vercel.json  wrangler.toml
.cloudflare/: README.md  deploy.sh
.github/: pull_request_template.md
configs/: demo.yaml  multilingual.yaml  test.yaml
docs/: 00-vision-overview.md  01-plain-english-summary.md  02-problem-statement.md  03-solution-at-a-glance.md  04-use-cases-and-demos.md  05-terminology-glossary-en.md  10-fractal-tape-concept.md  11-glyph-library-design.md  12-clustered-phrase-memory.md  13-hybrid-tokenizer-theory.md  14-cross-lingual-anchor-theory.md  20-fractal-addressing-spec.md  200-fractal-glyph-memory-overview.md  201-common-address-spec.md  202-memory-service-architecture.md  203-memory-service-api.md  204-agent-memory-usecase.md  205-multimodal-fractal-experience-tape.md  206-viewers-integration.md  207-tgo-integration-and-metrics.md  208-implementation-plan-and-phases.md  21-glyph-id-encoding-spec.md  210-phase-4-agent-memory-and-api.md  211-agent-memory-eval-and-test-plan.md  213-agent-memory-console-ui.md  22-phrase-clustering-math.md  23-probabilistic-modeling.md  24-information-theoretic-analysis.md  30-system-architecture-overview.md  31-data-pipeline-design.md  32-storage-layout-and-indexes.md  33-tokenizer-integration-architecture.md  34-llm-integration-patterns.md  40-tech-stack-and-dependencies.md  41-data-ingestion-implementation.md  42-embedding-and-clustering-impl.md  43-glyph-id-manager-impl.md  44-fractal-tape-storage-impl.md  45-tokenizer-wrapper-impl.md  46-llm-adapter-impl.md  (+40 more)
scripts/: README.md  analyze_cluster_languages.py  bench_context_efficiency.py  bench_storage.py  compression_experiments.py  context_efficiency_experiments.py  cross_lingual_experiments.py  debug_memory_dump.py  finetune_glyph_model.py  generate_plots.py  phase5_bench_context.py  phase5_prepare_datasets.py  phase5_standalone_bench.py  (+12 more)
(+117 files in other folders)
